--- a/config/locales/users.zh-CN.yml
+++ b/config/locales/users.zh-CN.yml
@@ -18,7 +18,7 @@
     dont_like_it: "不喜欢?"
     bind_another_account: "绑定其他帐号用于登陆"
     register_user: "注册新用户"
-    suggest_using_twitter_id: "谨慎填写，以后不可修改，建议用 Twitter ID。"
+    suggest_using_email_id: "谨慎填写，以后不可修改，建议用 Email。"
     already_have_account: "已经有帐号了？"
     forget_password: "忘记了密码?"
     not_recieve_confirm_mail: "未收到确认邮件?"
